feature: generalized machines and their rules